# libfoxenbitstream

./: .gitignore  README.md  meson.build
foxen/: bitstream.c  bitstream.h
test/: test_bitstream.c
